# fast_jetclass

./: .gitignore  README.md  fast_jetclass.yml  setup.cfg
deepsets/: deepsets_quantised.py  deepsets_synth.py  synthesize.py
fast_deepsets/data/: data.py  plots.py  standardization.py
fast_deepsets/deepsets/: deepsets.py  deepsets_quantised.py  deepsets_synth.py  hyperparam_optimisation.py  synthesize.py  test.py  train.py  util.py
fast_deepsets/mlp/: mlp.py  mlp_quantised.py  mlp_synth.py  train.py  util.py
fast_deepsets/util/: util.py
fast_jetclass/data/: data.py  plots.py
fast_jetclass/deepsets/: deepsets.py  deepsets_quantised.py  deepsets_synth.py  synthesize.py  test.py  train.py  util.py
fast_jetclass/intnet/: hls_node_edge_projection.py  intnet.py  intnet_quantised.py  intnet_synth.py  synthesize.py  test.py  train.py  util.py
fast_jetclass/mlp/: hyperparam_optimisation.py  mlp.py  mlp_quantised.py  synthesize.py  test.py  train.py  util.py
fast_jetclass/util/: flops.py  plots.py  util.py
mlp/: flops.py  hyperparam_optimisation.py  mlp.py  mlp_quantised.py  mlp_synth.py  synthesize.py  test.py  train.py  util.py
preprocessing/: feature_selection.py  plots.py
scripts/: deepsets_synth  deepsets_test  deepsets_train  mlp_train
scripts/configs/: deepsets_8bit_8const.yml  deepsets_8bit_8const_synthtrain.yml  deepsets_float32_8const.yml
scripts/configs/mlp_8bit_16const/: mlp_8bit_16const_synthtrain.yml
scripts/configs/mlp_8bit_32const/: mlp_8bit_32const_synthtrain.yml
util/: util.py
(+1 files in other folders)
