[metadata]
name = fast_deepsets
version = 1.0
author = Patrick Odagiu
author_email = podagiu@ethz.ch
description = Implementation of deepsets and synthetisation onto an FPGA for fast inference.
long_description = file: README.md
long_description_content_type = text/markdown
url = github.com/bb511/deepsets_synth
classifiers =
    Programming Language :: Python :: 3.10
    Operating System :: Unix
    Environment :: GPU :: NVIDIA CUDA :: 12 :: 12.2
license_files = LICENSE.txt

[options]
packages = find:

[options.packages.find]
include = fast_deepsets
